--- a/MecanicaEncoder/style.css
+++ b/MecanicaEncoder/style.css
@@ -126,15 +126,14 @@ header .menu{
 /*=============== VARIABLES CSS ===============*/
 :root {
   /*========== Colors ==========*/
-  /*Color mode HSL(hue, saturation, lightness)*/
+ 
   --first-color: hsl(82, 60%, 28%);
   --title-color: hsl(0, 0%, 15%);
   --text-color: hsl(0, 0%, 35%);
   --body-color: hsl(0, 0%, 95%);
   --container-color: hsl(0, 0%, 100%);
 
-  /*========== Font and typography ==========*/
-  /*.5rem = 8px | 1rem = 16px ...*/
+ 
   --body-font: "Poppins", sans-serif;
   --h2-font-size: 1.25rem;
   --small-font-size: .813rem;
@@ -165,29 +164,34 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  
 }
 
 /*=============== CARD ===============*/
 .container {
   display: grid;
   place-items: center;
-  margin-inline: 1.5rem;
+  margin-inline: 1.5rem;              
   padding-block: 5rem;
 }
 
 .card__container {
   display: grid;
   row-gap: 3.5rem;
+  
+  
 }
 
 .card__article {
   position: relative;
   overflow: hidden;
+  display: flex;
 }
 
 .card__img {
   width: 328px;
   border-radius: 1.5rem;
+  
 }
 
 .card__data {
@@ -229,7 +233,7 @@ img {
   text-decoration: underline;
 }
 
-/* Naming animations in hover */
+
 .card__article:hover .card__data {
   animation: show-data 1s forwards;
   opacity: 1;
@@ -248,7 +252,7 @@ img {
   animation: remove-data 1s forwards;
 }
 
-/* Card animation */
+
 @keyframes show-data {
   50% {
     transform: translateY(-10rem);
@@ -286,8 +290,7 @@ img {
   }
 }
 
-/*=============== BREAKPOINTS ===============*/
-/* For small devices */
+
 @media screen and (max-width: 340px) {
   .container {
     margin-inline: 1rem;
@@ -299,7 +302,7 @@ img {
   }
 }
 
-/* For medium devices */
+
 @media screen and (min-width: 768px) {
   .card__container {
     grid-template-columns: repeat(2, 1fr);
@@ -307,7 +310,7 @@ img {
   }
 }
 
-/* For large devices */
+
 @media screen and (min-width: 1120px) {
   .container {
     height: 100vh;
@@ -397,9 +400,6 @@ img {
         padding: 35px 0px;
     }
 }
-
-
-
 .contenedor_contacto {
   top: 200px;
   position: relative;
@@ -581,3 +581,20 @@ button {
 button:hover {
   background-color: #333;
 }
+.containerreg {
+  padding: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.mantenimiento_vehiculo{
+  padding: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
